deploy/app/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  revisionHistoryLimit: 1
  selector: {}
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-creds
      containers:
      - name: service
        image: app
        args: [ '--config', '/config/stud42.yaml', serve, api, '-g' ]
        command: [ stud42cli ]
        volumeMounts:
          - name: config
            mountPath: /config
            readOnly: true
        resources:
          limits:
            memory: "42Mi"
            cpu: "100m"
        ports:
        - containerPort: 4000
      volumes:
      - name: config
        configMap:
          name: stud42-config
