deploy/app/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-api
spec:
  ports:
  - port: 4000
    targetPort: 4000
