deploy/app/api/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: http-api
spec:
  hosts:
  - s42.app
  gateways:
  - s42-app-live
  http:
  - name: http-api-gql
    match:
    - method:
        exact: POST
      uri:
        exact: "/graphql"
    rewrite:
      uri: "/graphql"
    route:
    - destination:
        host: http-api
        port:
          number: 4000
  - name: http-api-gqli
    match:
    - method:
        exact: GET
      uri:
        exact: "/graphql"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: http-api
        port:
          number: 4000
